// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateAndUpload component action buttons should show and be enabled if file creation is possible 1`] = `
<div class="create-and-upload-actions oc-flex-inline oc-width-1-1"><span><oc-button-stub type="button" size="medium" arialabel="Create a new folder" submit="button" variation="primary" appearance="filled" justifycontent="center" gapsize="medium" id="new-folder-btn"><oc-icon-stub name="resource-type-folder" filltype="fill" accessiblelabel="" type="span" size="medium" variation="passive" color=""></oc-icon-stub> <span>New Folder</span></oc-button-stub></span> <span><oc-button-stub type="button" size="medium" arialabel="Upload files or folders" submit="button" variation="passive" appearance="outline" justifycontent="center" gapsize="medium" id="upload-menu-btn"><oc-icon-stub name="upload" filltype="line" accessiblelabel="" type="span" size="medium" variation="passive" color=""></oc-icon-stub> <span>Upload</span></oc-button-stub></span>
  <oc-drop-stub dropid="upload-menu-drop" toggle="#upload-menu-btn" position="bottom-start" mode="click" closeonclick="true" paddingsize="small" class="oc-width-auto">
    <oc-list-stub id="upload-list">
      <li class="oc-menu-item-hover">
        <resource-upload-stub btnlabel="" btnclass="oc-width-1-1"></resource-upload-stub>
      </li>
      <li class="oc-menu-item-hover">
        <resource-upload-stub btnlabel="" btnclass="oc-width-1-1" isfolder="true"></resource-upload-stub>
      </li>
    </oc-list-stub>
  </oc-drop-stub>
  <!---->
</div>
`;

exports[`CreateAndUpload component file handlers should show additional handlers 1`] = `
<div class="create-and-upload-actions oc-flex-inline oc-width-1-1"><span><oc-button-stub type="button" size="medium" arialabel="Create new files or folders" submit="button" variation="primary" appearance="filled" justifycontent="center" gapsize="medium" id="new-file-menu-btn"><oc-icon-stub name="add" filltype="fill" accessiblelabel="" type="span" size="medium" variation="passive" color=""></oc-icon-stub> <span>New</span></oc-button-stub></span>
  <oc-drop-stub dropid="new-file-menu-drop" toggle="#new-file-menu-btn" position="bottom-start" mode="click" closeonclick="true" paddingsize="small" class="oc-width-auto">
    <oc-list-stub id="create-list">
      <li class="create-list-folder oc-menu-item-hover">
        <oc-button-stub type="button" size="medium" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium" id="new-folder-btn">
          <oc-resource-icon-stub resource="[object Object]" size="medium"></oc-resource-icon-stub>
          <translate-stub tag="span">Folder</translate-stub>
        </oc-button-stub>
      </li>
      <li class="create-list-file oc-menu-item-hover">
        <oc-button-stub type="button" size="medium" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium" class="new-file-btn-txt">
          <oc-resource-icon-stub resource="[object Object]" size="medium"></oc-resource-icon-stub> <span>Plain text file</span>
        </oc-button-stub>
      </li>
      <li class="create-list-file oc-menu-item-hover">
        <oc-button-stub type="button" size="medium" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium" class="new-file-btn-md">
          <oc-resource-icon-stub resource="[object Object]" size="medium"></oc-resource-icon-stub> <span>Mark-down file</span>
        </oc-button-stub>
      </li>
      <li class="create-list-file oc-menu-item-hover">
        <oc-button-stub type="button" size="medium" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium" class="new-file-btn-drawio">
          <oc-resource-icon-stub resource="[object Object]" size="medium"></oc-resource-icon-stub> <span>Draw.io document</span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
  </oc-drop-stub> <span><oc-button-stub type="button" size="medium" arialabel="Upload files or folders" submit="button" variation="passive" appearance="outline" justifycontent="center" gapsize="medium" id="upload-menu-btn"><oc-icon-stub name="upload" filltype="line" accessiblelabel="" type="span" size="medium" variation="passive" color=""></oc-icon-stub> <span>Upload</span></oc-button-stub></span>
  <oc-drop-stub dropid="upload-menu-drop" toggle="#upload-menu-btn" position="bottom-start" mode="click" closeonclick="true" paddingsize="small" class="oc-width-auto">
    <oc-list-stub id="upload-list">
      <li class="oc-menu-item-hover">
        <resource-upload-stub btnlabel="" btnclass="oc-width-1-1"></resource-upload-stub>
      </li>
      <li class="oc-menu-item-hover">
        <resource-upload-stub btnlabel="" btnclass="oc-width-1-1" isfolder="true"></resource-upload-stub>
      </li>
    </oc-list-stub>
  </oc-drop-stub>
  <!---->
</div>
`;
